tdf#106011: The "swing angle" is negative when counter-clockwise

Change-Id: I1ef77e4c8cf0a6d31b36411a79b576115c32c644
(cherry picked from commit 34d8dc19a08e2752a4b8d3b3d83b7cf3ac341f1c)
Reviewed-on: https://gerrit.libreoffice.org/34283
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>